// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertBoxGroup /> renders 1`] = `
<Fragment>
  <AlertBox
    id={1}
    key="1"
    message="info message"
    variant="info"
  />
  <AlertBox
    id={2}
    key="2"
    message="danger message"
    variant="danger"
  />
</Fragment>
`;

exports[`<AlertBoxGroup /> renders grouped alerts 1`] = `
<AlertBox
  id={1}
  key="1"
  message="info message"
  variant="info"
  waitingItems={2}
/>
`;
